# so-100-astro-tracker

./: .env  .gitignore  CLAUDE.md  Dockerfile  Dockerfile.arm64  Dockerfile.multiarch  Makefile  README_PI5.md  TEST_RESULTS.md  build_multiarch.sh  deploy_to_pi5.sh  docker-compose.multiarch.yml  docker-compose.override.yml  docker-compose.pi5.yml  docker-compose.test.yml  docker-compose.yml  quick_test.sh  run.sh  run_full_test.sh  run_tests.sh  setup_buildx.sh  setup_pi5.sh  test_commands.md  test_multiarch.sh  test_toronto_moon.sh  transfer_image_to_pi.sh
.claude/: settings.local.json
config/: cyclonedds.xml  joint_limits.yaml  so_100_arm.ros2_control.xacro
docker/: README.md  entrypoint.sh  test_star_tracker.sh
star_tracker/: CMakeLists.txt  integration_test_results.json
star_tracker/launch/: star_tracker_gps.launch.py  star_tracker_imu.launch.py
star_tracker/star_tracker/: bno055_interface.py  star_tracker_node.py
